<resources>
    <string name="app_name">A4</string>
    <string name="name_label">Name:</string>
    <string name="previous_button">Previous</string>
    <string name="next_button">Next</string>
    <string name="copyright">Copyright mkkoh</string>
    <string name="logout_button">Logout</string>
    <string name="question">Q</string>

    <string name="welcome_label">Welcome,</string>

    <string name="topic_selection">Topic Selection</string>
    <string name="topic">Topic</string>
    <string name="num_questions"># of Questions</string>
    <string name="load">Load</string>




</resources>
